[package]
name = "timetest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = { version = "0.3", features = ["executor", "thread-pool"] }
crossbeam = "0.8"
signal-hook = "0.3"
actix-web = "3"
reqwest = { version = "0.11", features = ["blocking"] }